# wan

./: .copier-answers.yml  .pre-commit-config.yaml  .renovaterc.json  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  delete-untagged-packages.yml  readthedocs-preview.yml  renovate.yml  semantic-release.yml
docs/: README.md  RoadMap.md  conf.py  index.md
docs/advanced/: dev-containers.md
docs/api/: settings.md
docs/cli/: index.md
docs/development/: git-workflow.md  tests.md
docs/management/: init.md  release.md  settings.md
ntf/: __init__.py  utils.py
src/wan/: __init__.py  cli.py  notify.py  settings.py  utils.py  watch.py
tests/: cli_test.py  pkg_test.py  settings_test.py
wan/: __init__.py  notify.py  utils.py
